# slary

./: .gitignore  App.tsx  IMPLEMENTATION_STATUS.md  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
android/: README.md  SECURITY.md  build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/model/: conf_matrix.json
android/app/src/main/assets/www/: index.html
android/app/src/main/cpp/: CMakeLists.txt  bridge_jni.cpp
android/app/src/main/cpp/core/: Engine.cpp  RingBuffer.cpp  RingBuffer.h
android/app/src/main/cpp/feature_extraction/: .gitkeep  MelSpectrogram.cpp  MelSpectrogram.h
android/app/src/main/cpp/hook/: .gitkeep  audio_hw_wrapper.c
android/app/src/main/cpp/inference/: .gitkeep  ConfMatrix.cpp  ConfMatrix.h  TFLiteRunner.cpp  TFLiteRunner.h  conf_matrix_capi.cpp  inference_capi.cpp
android/app/src/main/cpp/injector/: .gitkeep  AudioInjector.cpp  AudioInjector.h  injector_capi.cpp
android/app/src/main/java/com/antigravity/: Bridge.java  MainActivity.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
components/: Dashboard.tsx  DictionaryManager.tsx  FloatingOrb.tsx  MechanicalSlider.tsx  Paywall.tsx  SettingsModal.tsx  SovereignCard.tsx
model/: .gitkeep  conf_matrix.json
scripts/: copy-web-to-android.js
services/: activationService.ts  audioService.ts  bmobService.ts  bridgeConfig.ts  matchService.ts
